# puppetproject

./: README.md
Code_workspace/: alter_map.py  mesh_creator.py  mesh_points.txt
Code_workspace/Odom_1/: Odom_1.ino
Code_workspace/Puppet_system_tests/: Manual_reset_sync_i2c.py  Test_info_lidar_ethernet.py
Code_workspace/grid_path_creator/: grid_path_creator.py  tiny_tcp_server.py
Code_workspace/maps/: altered_map.pgm  altered_map.yaml  test_map.pgm
Code_workspace/test_teensy/: test_teensy.ino
Code_workspace/tests_heatmap_creator/: generate_test_points.py  heatmap_creator.py  test_est.pgm  test_points.txt
Odom_1/: Odom_1.ino
Vel_1/: Vel_1.ino
app_command_pkg/: package.xml  setup.cfg  setup.py
app_command_pkg/app_command_pkg/: app_command.py
code_workspace/Puppet_system_tests/: Map_saver_from_ros2_topic.py  Test_communication_arduino_i2c.py  Test_communication_tablette_wifi.py  Test_receiving_lidar_data_ethernet.py  Test_velocity_through_i2c.py
code_workspace/grid_path_creator/: grid_path_creator.py  tiny_tcp_server.py
code_workspace/test_io/: test_io.ino
explore_lite_IRL/: CMakeLists.txt  package.xml
explore_lite_IRL/config/: params.yaml  params_costmap.yaml
explore_lite_IRL/launch/: explore.launch.py
explore_lite_IRL/src/: costmap_client.cpp  explore.cpp  frontier_search.cpp
puppet_irl_bringup/: setup.cfg  setup.py
puppet_irl_bringup/config/: mapper_params_online_async.yaml  nav2_params.yaml
puppet_irl_bringup/launch/: goto_launch.py  mapper_server_launch.py  (+3 more)
reverse_shim_controller/: package.xml  reverse_shim_controller.xml
robot_control/: package.xml
ros2_workspace/puppet_irl_bringup/: package.xml  setup.py
ros2_workspace/puppet_irl_bringup/config/: localizer_params_online_async.yaml  mapper_params_online_async.yaml
ros2_workspace/puppet_irl_bringup/launch/: manual_mapping_bringup.launch.py  nav2_launch.py  slam_toolbox.launch.py
ros2_workspace/puppet_irl_bringup/launch/Archives/: autonomous_mapping_bringup(OBSOLETE).py  mapping.launch.py
scan_from_lidar/: package.xml  setup.py
scd_525_measures/: read_sfp100_rate.py  sfd100.py
(+75 files in other folders)
